WorkCollectController - fix image not showing by replace ' ' to '_'
Grading.cshtml
- show PassorNot options in every status

WorkCollect.cshtml
- content update

work.css
- pagination z-index

--- a/mainform_noSmoking/wwwroot/css/works.css
+++ b/mainform_noSmoking/wwwroot/css/works.css
@@ -379,6 +379,9 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
+.pagination {
+    z-index: 0;
+}
 
 footer {
     background: #fff;
